--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -116,6 +116,36 @@ services:
               device_ids: [ "0" ]
               capabilities: [ gpu ]
 
+  formula_server:
+    container_name: formula_server
+    image: registry.cn-beijing.aliyuncs.com/yuemengrui/ai:pytorch2.1.2-cuda12.1-cudnn8-ubuntu20.04-py311-0.2
+    command: [ "/bin/bash", "-c", "/workspace/Formula_Server/docker_run.sh" ]
+    volumes:
+      - ./Formula_Server:/workspace/Formula_Server
+      - ./Formula_Server/configs/formula_config.json:/workspace/model_config.json
+      - ./Models/Formula/det/formula_det_yolo.pt:/workspace/models/formula_det_yolo.pt
+      - ./Models/Formula/rec/unimernet_base:/workspace/models/unimernet
+    ports:
+      - "24683:24680"
+    restart: unless-stopped
+    networks:
+      - ainet
+    stdin_open: true
+    tty: true
+    healthcheck:
+      test: [ "CMD", "curl", "-f", "http://localhost:24680/ai/health" ]
+      interval: 60s
+      start_period: 60s
+      timeout: 10s
+      retries: 5
+    deploy:
+      resources:
+        reservations:
+          devices:
+            - driver: nvidia
+              device_ids: [ "0" ]
+              capabilities: [ gpu ]
+
 
 networks:
   ainet:
